config-root/namespaces/jx-production/k8s-reactjs/k8s-reactjs-ingress.yaml
# Source: k8s-reactjs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'k8s-reactjs'
  name: k8s-reactjs
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: k8s-reactjs
                port:
                  number: 80
      host: k8s-reactjs-jx-production.34.123.58.147.nip.io
